<resources>

    <!-- 我的钱包 -->
    <string name="jrmf_w_my_wallet_title">我的钱包</string>

    <!--我的红包-->
    <string name="jrmf_w_my_rp_title">我的红包</string>
    <string name="luck_rp">拼手气红包</string>
    <string name="normal_rp">普通红包</string>
    <string name="trade_suc">交易成功</string>

    <!-- 银行卡 -->
    <string name="jrmf_w_my_bank_title">银行卡设置</string>
    <string name="jrmf_w_look_banks">查看支持银行</string>
    <string name="jrmf_w_card_num_error">请输入正确的银行卡号</string>
    <string name="jrmf_w_name_error">请输入姓名</string>
    <string name="jrmf_w_id_card_error">请输入正确的身份证号</string>
    <string name="jrmf_w_phone_num_error">请输入正确的手机号</string>
    <string name="jrmf_w_card_id_error">银行卡编号错误</string>
    <string name="jrmf_w_send_code_suc">验证码发送成功</string>
    <string name="jrmf_w_req_code">请先获得验证码</string>
    <string name="jrmf_w_get_code">重新获取验证码</string>
    <string name="jrmf_w_input_code">请输入短信验证码</string>
    <string name="jrmf_w_input_code_error">请输入正确的验证码</string>
    <string name="jrmf_w_add_card_suc">银行卡添加成功</string>
    <string name="jrmf_w_pay_protocol">《金融魔方用户协议》</string>
    <string name="jrmf_w_fumin_protocol">《富民银行用户服务协议》</string>
    <string name="jrmf_verify_card_fee">绑卡服务由京东支付提供，为验证银行卡有效性需从卡内扣除1分钱。</string>
    <string name="jrmf_w_bind_card_timeout">银行系统繁忙，获取绑卡结果失败，若绑定成功可在"银行卡设置"中查看</string>

    <!--收支明细 -->
    <string name="jrmf_w_detail_title">余额账户</string>
    <string name="jrmf_w_detail_title_freeze">冻结账户</string>
    <string name="jrmf_w_update_pwd">修改支付密码</string>
    <string name="jrmf_w_recharge_feedback">充值未到账申诉</string>
    <string name="jrmf_w_deposit_feedback">提现未到账申诉</string>
    <string name="jrmf_w_not_open">该功能暂未开通，敬请期待</string>
    <string name="jrmf_w_to_account_time">到账时间：%1$s</string>
    <string name="jrmf_w_to_account_amount">到账金额：%1$s元</string>
    <string name="jrmf_w_bank_no">银行卡号：%1$s</string>
    <string name="jrmf_w_appeal_question_tip">若您查询账户，金额未到账请点击“有疑问？”，工作人员会进行人工核实并与您联系</string>
    <string name="jrmf_w_appeal_question">有疑问？</string>
    <string name="jrmf_w_receive_question">我们已收到您的问题，稍后工作人员会与您联系</string>

    <!-- 提现 -->
	<string name="jrmf_w_deposit_recharge_tip">提示：提现服务商规定，提现业务每笔提现收取%1$s元手续费和提现金额*%2$s的服务费。</string>
	<string name="jrmf_w_deposit_tip">提示：单人单日限额%1$s元，每日限提现三次</string>
	<string name="jrmf_w_deposit_tip_new_user">提示：每日限提现三次</string>
    <string name="jrmf_w_deposit_fee_tip">提示：因涉及跨行结算及支付费用，提现业务每笔需收取%1$s元手续费</string>
    <string name="jrmf_w_card_limit">今日还可以提现%1$s元</string>
    <string name="jrmf_w_card_limit2">今日还可提现%1$s元，此银行卡为唯一开户银行卡</string>
    <string name="jrmf_w_card_limit_new_user">新绑卡用户今日还可以提现%1$s元</string>
    <string name="jrmf_w_deposit_money">提现%1$s元</string>
    <string name="jrmf_w_select_bank_card">选择银行卡</string>
    <string name="jrmf_w_charge">""</string>
    <string name="jrmf_w_charge2">手续费%1$s元</string>
    <string name="jrmf_w_charge_tip_dialog">本次提现将从您所提金额内扣除%1$s元手续费</string>
    <string name="jrmf_w_get_deposit_over">提现金额超限</string>
    <string name="jrmf_w_get_deposit_balance_less">提现金额不足</string>
    <string name="jrmf_w_get_deposit_low">您的金额不足以支付手续费</string>
    <string name="jrmf_w_get_deposit_low10">提现金额不能低于%1$s元</string>
    <string name="jrmf_w_sub_bank_province">补充开卡省/直辖市</string>
    <string name="jrmf_w_sub_bank_city">补充开卡城市</string>
    <string name="jrmf_w_sub_actual_amount">下一步（实际到账金额：%1$s元）</string>
    <string name="jrmf_w_bt_next">下一步</string>
    <string name="jrmf_w_close_quick_redeem">因银行风控规定，所有钱包用户快速到账有总额限制，达到上限后，请选择T+1普通到账方式提现。</string>
    <string name="jrmf_w_close_quick_redeem1">每日快速到账额度已达上限,请使用普通到账进行提现操作(普通到账与快速到账共用每日限额%1$s元与提现次数三次)</string>
    <string name="jrmf_w_sup_bank_prompt">快速提现需选择银行卡所在省/市，如填写有误会出现提现失败问题。提现失败金额将退回到您的余额账户中</string>
    <string name="jrmf_w_deposit_fail_reason">失败原因</string>
    <string name="jrmf_w_deposit_common">普通到账</string>
    <!-- 充值 -->
    <string name="jrmf_w_recharge_money">充值%1$s元</string>
    <string name="jrmf_w_no_card_bind">您还没有绑定银行卡，请先添加银行卡</string>
    <string name="jrmf_w_input_recharge_amount">请输入充值金额</string>
    <string name="jrmf_w_recharge_fail">充值失败</string>
    <string name="jrmf_w_recharge_suc">充值成功</string>
    <string name="jrmf_w_card_des">尾号(%1$s)</string>
    <string name="jrmf_w_card_recharge_limit">该卡本次最多可充值%1$s元</string>
    <string name="jrmf_w_card_recharge_limit_new_user">新绑卡用户每日最多可充值500元</string>
    <string name="jrmf_w_cardname_card_des">%1$s(%2$s)</string>
    <string name="jrmf_w_recharge_timeout">银行系统繁忙，获取充值结果失败；若银行卡已扣款，可以在交易记录中查询充值结果</string>
    <string name="jrmf_w_get_deposit_timeout">银行系统繁忙，获取提现结果失败，若提现成功可在交易记录中查询</string>


    <!--银行卡设置  -->
    <string name="jrmf_w_del_card_des">删除尾号为%1$s的银行卡</string>
    <string name="jrmf_w_unbind_suc">解绑成功</string>

    <!--账户信息-->

    <string name="jrmf_w_account_info_title">账户信息</string>
    <string name="jrmf_w_update_user_info">修改账户信息</string>
    <string name="jrmf_w_set_user_info">设置账户信息</string>
    <string name="jrmf_w_account_net_error">当前网络不佳，获取账户信息失败</string>
    <string name="jrmf_w_no_authen">未实名认证</string>

    <!--找回支付密码-->
    <string name="jrmf_w_get_pwd_title">找回支付密码</string>

    <!--身份认证-->
    <string name="jrmf_w_update_userinfo_suc">修改成功</string>

    <!--密码校验-->
    <string name="jrmf_w_pwd_error">支付密码错误</string>

    <!--找回支付密码-->
    <string name="jrmf_w_set_pwd_error">请输入6位支付密码</string>
    <string name="jrmf_w_pwd_not_same">两次密码输入不一致</string>
    <string name="jrmf_w_set_pwd_suc">支付密码设置成功</string>

    <!--网络-->
    <string name="jrmf_w_net_error">当前网络不佳</string>
    <string name="jrmf_w_net_error_l">当前网络不佳,请稍后再试</string>
    <!--红包详情-->
    <string name="jrmf_w_who_rp">%1$s的红包</string>
    <string name="jrmf_w_single_rp_done">%1$d个红包共%2$s元</string>
    <string name="jrmf_w_single_rp">红包金额%1$s元,等待对方领取</string>
    <string name="jrmf_w_pin_rp_done">%1$d个红包共%2$s元，%3$s被抢光</string>
    <string name="jrmf_w_pin_rp">已领取%1$d/%2$d，共%3$s/%4$s元</string>
    <string name="jrmf_w_pin_rp_other_done">%1$d个红包，%2$s被抢光</string>
    <string name="jrmf_w_pin_rp_other">领取%1$d/%2$d个</string>
    <string name="jrmf_w_rp_no_grab_tip">未领取的红包过期后会退回零钱</string>
    <string name="jrmf_w_rp_no_grab_tip_expired">未领取的红包，将于24小时后发起退款</string>
    <string name="jrmf_w_rp_receive_grab_tip1">收到的钱可用来发红包</string>
    <string name="jrmf_w_rp_receive_grab_tip2">收到的钱可直接提现</string>
    <string name="jrmf_w_self_rp_has_left">已领取%1$d/%2$d个，共%3$s/%4$s元</string>
    <string name="jrmf_w_self_rp_has_left_timeout">该红包已过期。已领取%1$d/%2$d个，共%3$s/%4$s元</string>
    <string name="jrmf_w_refund_detail">退款详情</string>

    <!--选择支行-->
    <string name="jrmf_w_no_city">没有与之对应的城市</string>
    <string name="jrmf_w_no_branch">没有与之对应的支行,请您手动输入支行</string>
    <string name="jrmf_w_no_sel_province">请选择开户省</string>
    <string name="jrmf_w_no_sel_city">请选择开户市</string>
    <string name="jrmf_w_no_sel_branch">请选择支行</string>
    <string name="jrmf_w_no_input_branch">请输入支行</string>
    <string name="jrmf_w_no_input_amount">请输入提现金额</string>
    <string name="jrmf_w_input_amount_error">请输入正确的提现金额</string>


    <string name="jrmf_w_retry">重试</string>
    <string name="jrmf_w_quit">取消</string>
    <string name="jrmf_w_confirm">确定</string>
    <string name="jrmf_w_to_buttom">到底了噢～</string>
    <string name="jrmf_w_loading">加载中...</string>
    <string name="jrmf_w_deposit_title">提现</string>
    <string name="jrmf_w_deposit_money_format_error">金额格式错误</string>
    <string name="jrmf_w_deposit_submit_suc">提现申请成功</string>
    <string name="jrmf_w_deposit_select_province">请先选择省</string>

</resources>












